--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "calculator",
+  "name": "react-sorting",
   "version": "0.1.0",
   "license": "MIT",
   "homepage": "http://treyyoder.github.io",
